--- a/work.Rmd
+++ b/work.Rmd
@@ -156,3 +156,174 @@ ggplot(mpg, aes(reorder(class, hwy), hwy)) +
     geom_boxplot()
 ```
 
+# Basic Plot Types
+```{r}
+df <- data.frame(
+    x = c(3, 1, 5),
+    y = c(2, 4, 6),
+    label = c("a", "b", "c")
+)
+
+p <- ggplot(df, aes(x, y, label = label)) +
+    labs(x = NULL, y = NULL) + # Hide axis label
+    theme(plot.title = element_text(size = 12)) # Shrink plot title
+p + geom_point() + ggtitle("point")
+```
+```{r}
+p + geom_text() + ggtitle("text")
+```
+```{r}
+p + geom_bar(stat = "identity") + ggtitle("bar")
+```
+```{r}
+p + geom_tile() + ggtitle("raster")
+```
+```{r}
+p + geom_line() + ggtitle("line")
+```
+```{r}
+p + geom_area() + ggtitle("area")
+```
+```{r}
+p + geom_path() + ggtitle("path")
+```
+```{r}
+p + geom_polygon() + ggtitle("polygon")
+```
+## Font famaly
+```{r}
+df <- data.frame(x = 1, y = 3:1, family = c("sans", "serif", "mono"))
+ggplot(df, aes(x, y)) +
+    geom_text(aes(label = family, family = family))
+```
+## Using fontface: plain, bold, italic
+```{r}
+df <- data.frame(x = 1, y = 3:1, face = c("plain", "bold", "italic"))
+ggplot(df, aes(x, y)) +
+    geom_text(aes(label = face, fontface = face))
+```
+## Using horizontal and vertical alignment
+```{r}
+df <- data.frame(
+    x = c(1, 1, 2, 2, 1.5),
+    y = c(1, 2, 1, 2, 1.5),
+    text = c("bottom-left", "bottom-right",
+             "top-left", "top-right", "center")
+)
+ggplot(df, aes(x, y)) +
+    geom_text(aes(label = text))
+```
+```{r}
+ggplot(df, aes(x, y)) +
+    geom_text(aes(label = text), vjust = "inward", hjust = "inward")
+```
+You don’t want the text to overlap with the points (or bars etc)
+```{r}
+df <- data.frame(trt = c("a", "b", "c"), resp = c(1.2, 3.4, 2.5))
+ggplot(df, aes(resp, trt)) +
+    geom_point() +
+    geom_text(aes(label = paste0("(", resp, ")")), nudge_y = -0.15) +
+    xlim(1, 3.6)
+```
+Annotate this plot with which president was in power at the time
+```{r}
+ggplot(economics, aes(date, unemploy)) +
+    geom_line()
+```
+```{r}
+presidential <- subset(presidential, start > economics$date[1])
+ggplot(economics) +
+    geom_rect(
+        aes(xmin = start, xmax = end, fill = party),
+        ymin = -Inf, ymax = Inf, alpha = 0.2, data = presidential) +
+    geom_vline(
+        aes(xintercept = as.numeric(start)),
+        data = presidential,
+        colour = "grey50", alpha = 0.5) +
+    geom_text(
+        aes(x = start, y = 2500, label = name),
+        data = presidential,
+        size = 3, vjust = 0, hjust = 0, nudge_x = 50
+        ) +
+    geom_line(aes(date, unemploy)) +
+    scale_fill_manual(values = c("blue", "red")
+)
+```
+# Group aesthetic
+```{r}
+library(nlme)
+head(Oxboys)
+```
+## Multiple Groups, One Aesthetic
+```{r}
+ggplot(Oxboys, aes(age, height, group = Subject)) +
+    geom_point() +
+    geom_line()
+```
+```{r}
+ggplot(Oxboys, aes(age, height)) +
+    geom_point() +
+    geom_line()
+```
+## Different Groups on Different Layers
+```{r}
+ggplot(Oxboys, aes(age, height, group = Subject)) +
+    geom_line() +
+    geom_smooth(method = "lm", se = FALSE)
+```
+Correct variant
+```{r}
+ggplot(Oxboys, aes(age, height)) +
+    geom_line(aes(group = Subject)) +
+    geom_smooth(method = "lm", se = FALSE)
+```
+## Overriding the Default Grouping
+```{r}
+ggplot(Oxboys, aes(Occasion, height)) +
+    geom_boxplot()
+```
+```{r}
+ggplot(Oxboys, aes(Occasion, height)) +
+    geom_boxplot() +
+    geom_line(aes(group = Subject), color = "#3366FF", alpha = 0.5)
+```
+
+## Exercises
+Draw a boxplot of hwy for each value of cyl , without turning cyl into a
+factor. What extra aesthetic do you need to set?
+```{r}
+ggplot(mpg, aes(cyl, hwy, group = cyl)) +
+    geom_boxplot()
+```
+Modify the following plot so that you get one boxplot per integer value of displ
+```{r}
+ggplot(mpg, aes(displ, cty)) +
+    geom_boxplot()
+```
+```{r}
+ggplot(mpg, aes(displ, cty, group = displ)) +
+    geom_boxplot()
+```
+## Displaying Distributions
+```{r}
+ggplot(diamonds, aes(depth)) +
+    geom_freqpoly(aes(color = cut), binwidht = 0.1, na.rm = T) +
+    xlim(58, 68) +
+    theme(legend.position = "none")
+```
+```{r}
+ggplot(diamonds, aes(depth)) +
+    geom_histogram(aes(fill = cut), binwidht = 0.1, position = "fill",
+                   na.rm = T) +
+    xlim(58, 68) +
+    theme(legend.position = "none")
+```
+
+For continuous x, you’ll also need to set the group aesthetic to define how the
+x variable is broken up into bins
+```{r}
+ggplot(diamonds, aes(carat, depth)) +
+    geom_boxplot(aes(group = cut_width(carat, 0.1))) +
+    xlim(NA, 2.05)
+```
+
